--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -22,19 +21,17 @@
         <activity android:name=".BaseActivity" />
         <activity android:name=".Dashboard" />
         <activity android:name=".LoginActivity">
-        </activity>
-        <activity android:name=".AddCompany" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".OTPCheck" />
-        <activity android:name=".AddEmployee" />
-        <activity android:name=".HomeActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity android:name=".AddCompany" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".OTPCheck" />
+        <activity android:name=".AddEmployee" />
+        <activity android:name=".HomeActivity"></activity>
         <activity android:name=".Notification" />
         <activity android:name=".Contact" />
         <activity android:name=".ProfileActivity" />
@@ -54,9 +51,8 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
-
-        </activity>
+            android:label="@string/title_activity_maps"></activity>
+        <activity android:name=".ViewCompanyActivity"></activity>
     </application>
 
 </manifest>
