--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'com.android.volley:volley:1.1.1'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'me.biubiubiu.justifytext:library:1.1'
 
-    implementation 'com.uncopt:android.justified:1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     compile 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
+
 }
