--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
     android:largeHeap="true"
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
-        android:icon="@mipmap/appicon"
-        android:roundIcon="@mipmap/appicon"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
@@ -28,7 +28,8 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity android:name=".BaseActivity" />
         <activity android:name=".Dashboard" />
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+                  >
 
 
         </activity>
